--- a/Grocery-bud/index.html
+++ b/Grocery-bud/index.html
@@ -13,17 +13,16 @@
         <!-- form -->
         <form class="grocery-form">
             <p class="alert"></p>
-            <h3>Grocery-bud</h3>
+            <h3>grocery bud</h3>
             <div class="form-control">
-                <input type="text" id="grocery" placeholder="e.g. egg" />
-                <button type="submit" class="submit-btn">
-                    submit
-                </button>
+                <input type="text" id="grocery" placeholder="e.g. eggs"/>
+                <button type="submit" class="submit-btn">submit</button>
             </div>
         </form>
         <!-- list -->
         <div class="grocery-container">
-            <div class="grocery-list"> 
+            <div class="grocery-list">
+
             </div>
             <!-- button -->
             <button type="button" class="clear-btn">clear items</button>
